--- a/portfolio.html
+++ b/portfolio.html
@@ -167,23 +167,23 @@
 
           <li class="item">
             <div class="item-wrap">
+              <source media="(min-width: 1200px)" srcset="./img/works/works-2-desktop.webp,
+                                  ./img/works/works-2-desktop@2x.webp 2x" type="image/webp" />
+              <source media="(min-width: 1200px)" srcset="./img/works/works-2-desktop.jpg
+                                  1x,
+                                  ./img/works/works-2-desktop@2x.jpg 2x" />
+              <source media="(max-width: 1199px)" srcset="./img/works/works-2-tablet.webp
+                    1x,
+                    ./img/works/works-2-tablet@2x.webp 2x" type="image/webp" />
+              <source media="(max-width: 1199px)" srcset="./img/works/works-2-tablet.jpg 1x,
+                    ./img/works/works-2-tablet@2x.jpg 2x" />
+
+
               <picture>
                 <source media="(max-width: 767px)" srcset="./img/works/works-2.webp 1x,
                     ./img/works/works-2@2x.webp. 2x" type="image/webp" />
                 <source media="(max-width: 767px)" srcset="./img/works/works-2.jpg 1x,
                     ./img/works/works-2@2x.jpg 2x" />
-
-                <source media="(max-width: 1199px)" srcset="./img/works/works-2-tablet.webp
-                    1x,
-                    ./img/works/works-2-tablet@2x.webp 2x" type="image/webp" />
-                <source media="(max-width: 1199px)" srcset="./img/works/works-2-tablet.jpg 1x,
-                    ./img/works/works-2-tablet@2x.jpg 2x" />
-
-                <source media="(min-width: 1200px)" srcset="./img/works/works-2-desktop.webp,
-                    ./img/works/works-2-desktop@2x.webp 2x" type="image/webp" />
-                <source media="(min-width: 1200px)" srcset="./img/works/works-2-desktop.jpg
-                    1x,
-                    ./img/works/works-2-desktop@2x.jpg 2x" />
 
                 <img src="#" alt="Баскетбол" />
               </picture>
@@ -204,22 +204,22 @@
           <li class="item">
             <div class="item-wrap">
               <picture>
-                <source media="(max-width: 767px)" srcset="./img/works/works-3.webp 1x,
-                    ./img/works/works-3@2x.webp. 2x" type="image/webp" />
-                <source media="(max-width: 767px)" srcset="./img/works/works-3.jpg 1x,
-                    ./img/works/works-3@2x.jpg 2x" />
+
+                <source media="(min-width: 1200px)" srcset="./img/works/works-3-desktop.webp,
+                                    ./img/works/works-3-desktop@2x.webp 2x" type="image/webp" />
+                <source media="(min-width: 1200px)" srcset="./img/works/works-3-desktop.jpg
+                                    1x,
+                                    ./img/works/works-3-desktop@2x.jpg 2x" />
 
                 <source media="(max-width: 1199px)" srcset="./img/works/works-3-tablet.webp
                     1x,
                     ./img/works/works-3-tablet@2x.webp 2x" type="image/webp" />
                 <source media="(max-width: 1199px)" srcset="./img/works/works-3-tablet.jpg 1x,
                     ./img/works/works-3-tablet@2x.jpg 2x" />
-
-                <source media="(min-width: 1200px)" srcset="./img/works/works-3-desktop.webp,
-                    ./img/works/works-3-desktop@2x.webp 2x" type="image/webp" />
-                <source media="(min-width: 1200px)" srcset="./img/works/works-3-desktop.jpg
-                    1x,
-                    ./img/works/works-3-desktop@2x.jpg 2x" />
+                <source media="(max-width: 767px)" srcset="./img/works/works-3.webp 1x,
+                    ./img/works/works-3@2x.webp. 2x" type="image/webp" />
+                <source media="(max-width: 767px)" srcset="./img/works/works-3.jpg 1x,
+                    ./img/works/works-3@2x.jpg 2x" />
 
                 <img src="#" alt="Рыба" />
               </picture>
@@ -239,22 +239,21 @@
           <li class="item">
             <div class="item-wrap">
               <picture>
-                <source media="(max-width: 767px)" srcset="./img/works/works-4.webp 1x,
-                    ./img/works/works-4@2x.webp. 2x" type="image/webp" />
-                <source media="(max-width: 767px)" srcset="./img/works/works-4.jpg 1x,
-                    ./img/works/works-4@2x.jpg 2x" />
-
+                <source media="(min-width: 1200px)" srcset="./img/works/works-4-desktop.webp,
+                                  ./img/works/works-4-desktop@2x.webp 2x" type="image/webp" />
+                <source media="(min-width: 1200px)" srcset="./img/works/works-4-desktop.jpg
+                                  1x,
+                                  ./img/works/works-4-desktop@2x.jpg 2x" />
                 <source media="(max-width: 1199px)" srcset="./img/works/works-4-tablet.webp
                     1x,
                     ./img/works/works-4-tablet@2x.webp 2x" type="image/webp" />
                 <source media="(max-width: 1199px)" srcset="./img/works/works-4-tablet.jpg 1x,
                     ./img/works/works-4-tablet@2x.jpg 2x" />
 
-                <source media="(min-width: 1200px)" srcset="./img/works/works-4-desktop.webp,
-                    ./img/works/works-4-desktop@2x.webp 2x" type="image/webp" />
-                <source media="(min-width: 1200px)" srcset="./img/works/works-4-desktop.jpg
-                    1x,
-                    ./img/works/works-4-desktop@2x.jpg 2x" />
+                <source media="(max-width: 767px)" srcset="./img/works/works-4.webp 1x,
+                    ./img/works/works-4@2x.webp. 2x" type="image/webp" />
+                <source media="(max-width: 767px)" srcset="./img/works/works-4.jpg 1x,
+                    ./img/works/works-4@2x.jpg 2x" />
 
                 <img src="#" alt="Наушники" />
               </picture>
@@ -274,22 +273,22 @@
           <li class="item">
             <div class="item-wrap">
               <picture>
-                <source media="(max-width: 767px)" srcset="./img/works/works-5.webp 1x,
-                    ./img/works/works-5@2x.webp. 2x" type="image/webp" />
-                <source media="(max-width: 767px)" srcset="./img/works/works-5.jpg 1x,
-                    ./img/works/works-5@2x.jpg 2x" />
-
+                <source media="(min-width: 1200px)" srcset="./img/works/works-5-desktop.webp,
+                                      ./img/works/works-5-desktop@2x.webp 2x" type="image/webp" />
+                <source media="(min-width: 1200px)" srcset="./img/works/works-5-desktop.jpg
+                                      1x,
+                                      ./img/works/works-5-desktop@2x.jpg 2x" />
                 <source media="(max-width: 1199px)" srcset="./img/works/works-5-tablet.webp
                     1x,
                     ./img/works/works-5-tablet@2x.webp 2x" type="image/webp" />
                 <source media="(max-width: 1199px)" srcset="./img/works/works-5-tablet.jpg 1x,
                     ./img/works/works-5-tablet@2x.jpg 2x" />
 
-                <source media="(min-width: 1200px)" srcset="./img/works/works-5-desktop.webp,
-                    ./img/works/works-5-desktop@2x.webp 2x" type="image/webp" />
-                <source media="(min-width: 1200px)" srcset="./img/works/works-5-desktop.jpg
-                    1x,
-                    ./img/works/works-5-desktop@2x.jpg 2x" />
+
+                <source media="(max-width: 767px)" srcset="./img/works/works-5.webp 1x,
+                    ./img/works/works-5@2x.webp. 2x" type="image/webp" />
+                <source media="(max-width: 767px)" srcset="./img/works/works-5.jpg 1x,
+                    ./img/works/works-5@2x.jpg 2x" />
 
                 <img src="#" alt="Коробка" />
               </picture>
@@ -308,22 +307,23 @@
           <li class="item">
             <div class="item-wrap">
               <picture>
-                <source media="(max-width: 767px)" srcset="./img/works/works-6.webp 1x,
-                    ./img/works/works-6@2x.webp. 2x" type="image/webp" />
-                <source media="(max-width: 767px)" srcset="./img/works/works-6.jpg 1x,
-                    ./img/works/works-6@2x.jpg 2x" />
 
-                <source media="(max-width: 1199px)" srcset="./img/works/works-6-tablet.webp
-                    1x,
-                    ./img/works/works-6-tablet@2x.webp 2x" type="image/webp" />
-                <source media="(max-width: 1199px)" srcset="./img/works/works-6-tablet.jpg 1x,
-                    ./img/works/works-6-tablet@2x.jpg 2x" />
 
                 <source media="(min-width: 1200px)" srcset="./img/works/works-6-desktop.webp,
                     ./img/works/works-6-desktop@2x.webp 2x" type="image/webp" />
                 <source media="(min-width: 1200px)" srcset="./img/works/works-6-desktop.jpg
                     1x,
                     ./img/works/works-6-desktop@2x.jpg 2x" />
+                <source media="(max-width: 1199px)" srcset="./img/works/works-6-tablet.webp
+                                            1x,
+                                            ./img/works/works-6-tablet@2x.webp 2x" type="image/webp" />
+                <source media="(max-width: 1199px)" srcset="./img/works/works-6-tablet.jpg 1x,
+                                            ./img/works/works-6-tablet@2x.jpg 2x" />
+
+                <source media="(max-width: 767px)" srcset="./img/works/works-6.webp 1x,
+                    ./img/works/works-6@2x.webp. 2x" type="image/webp" />
+                <source media="(max-width: 767px)" srcset="./img/works/works-6.jpg 1x,
+                    ./img/works/works-6@2x.jpg 2x" />
 
                 <img src="#" alt="Аймак" />
               </picture>
@@ -345,22 +345,22 @@
           <li class="item">
             <div class="item-wrap">
               <picture>
-                <source media="(max-width: 767px)" srcset="./img/works/works-7.webp 1x,
-                                    ./img/works/works-7@2x.webp. 2x" type="image/webp" />
-                <source media="(max-width: 767px)" srcset="./img/works/works-7.jpg 1x,
-                                    ./img/works/works-7@2x.jpg 2x" />
-
-                <source media="(max-width: 1199px)" srcset="./img/works/works-7-tablet.webp
-                                    1x,
-                                    ./img/works/works-7-tablet@2x.webp 2x" type="image/webp" />
-                <source media="(max-width: 1199px)" srcset="./img/works/works-7-tablet.jpg 1x,
-                                    ./img/works/works-7-tablet@2x.jpg 2x" />
 
                 <source media="(min-width: 1200px)" srcset="./img/works/works-7-desktop.webp,
                                     ./img/works/works-7-desktop@2x.webp 2x" type="image/webp" />
                 <source media="(min-width: 1200px)" srcset="./img/works/works-7-desktop.jpg
                                     1x,
                                     ./img/works/works-7-desktop@2x.jpg 2x" />
+
+                <source media="(max-width: 1199px)" srcset="./img/works/works-7-tablet.webp
+                                    1x,
+                                    ./img/works/works-7-tablet@2x.webp 2x" type="image/webp" />
+                <source media="(max-width: 1199px)" srcset="./img/works/works-7-tablet.jpg 1x,
+                                    ./img/works/works-7-tablet@2x.jpg 2x" />
+                <source media="(max-width: 767px)" srcset="./img/works/works-7.webp 1x,
+                                    ./img/works/works-7@2x.webp. 2x" type="image/webp" />
+                <source media="(max-width: 767px)" srcset="./img/works/works-7.jpg 1x,
+                                    ./img/works/works-7@2x.jpg 2x" />
 
                 <img src="" alt="Журнал" />
               </picture>
@@ -381,22 +381,22 @@
           <li class="item">
             <div class="item-wrap">
               <picture>
-                <source media="(max-width: 767px)" srcset="./img/works/works-8.webp 1x,
-                                                    ./img/works/works-8@2x.webp. 2x" type="image/webp" />
-                <source media="(max-width: 767px)" srcset="./img/works/works-8.jpg 1x,
-                                                    ./img/works/works-8@2x.jpg 2x" />
 
-                <source media="(max-width: 1199px)" srcset="./img/works/works-8-tablet.webp
-                                                    1x,
-                                                    ./img/works/works-8-tablet@2x.webp 2x" type="image/webp" />
-                <source media="(max-width: 1199px)" srcset="./img/works/works-8-tablet.jpg 1x,
-                                                    ./img/works/works-8-tablet@2x.jpg 2x" />
 
                 <source media="(min-width: 1200px)" srcset="./img/works/works-8-desktop.webp,
                                                     ./img/works/works-8-desktop@2x.webp 2x" type="image/webp" />
                 <source media="(min-width: 1200px)" srcset="./img/works/works-8-desktop.jpg
                                                     1x,
                                                     ./img/works/works-8-desktop@2x.jpg 2x" />
+                <source media="(max-width: 767px)" srcset="./img/works/works-8.webp 1x,
+                                                    ./img/works/works-8@2x.webp. 2x" type="image/webp" />
+                <source media="(max-width: 767px)" srcset="./img/works/works-8.jpg 1x,
+                                                    ./img/works/works-8@2x.jpg 2x" />
+                <source media="(max-width: 1199px)" srcset="./img/works/works-8-tablet.webp
+                                                    1x,
+                                                    ./img/works/works-8-tablet@2x.webp 2x" type="image/webp" />
+                <source media="(max-width: 1199px)" srcset="./img/works/works-8-tablet.jpg 1x,
+                                                    ./img/works/works-8-tablet@2x.jpg 2x" />
 
                 <img src="#" alt="Бирка" />
               </picture>
@@ -417,17 +417,7 @@
             <div class="item-wrap">
 
               <picture>
-                <source media="(max-width: 767px)" srcset="./img/works/works-9.webp 1x,
-                                                                  ./img/works/works-9@2x.webp. 2x" type="image/webp" />
-                <source media="(max-width: 767px)" srcset="./img/works/works-9.jpg 1x,
-                                                                  ./img/works/works-9@2x.jpg 2x" />
 
-                <source media="(max-width: 1199px)" srcset="./img/works/works-9-tablet.webp
-                                                                  1x,
-                                                                  ./img/works/works-9-tablet@2x.webp 2x"
-                  type="image/webp" />
-                <source media="(max-width: 1199px)" srcset="./img/works/works-9-tablet.jpg 1x,
-                                                                  ./img/works/works-9-tablet@2x.jpg 2x" />
 
                 <source media="(min-width: 1200px)" srcset="./img/works/works-9-desktop.webp,
                                                                   ./img/works/works-9-desktop@2x.webp 2x"
@@ -435,6 +425,20 @@
                 <source media="(min-width: 1200px)" srcset="./img/works/works-9-desktop.jpg
                                                                   1x,
                                                                   ./img/works/works-9-desktop@2x.jpg 2x" />
+                <source media="(max-width: 1199px)"
+                  srcset="./img/works/works-9-tablet.webp
+                                                                                                                                      1x,
+                                                                                                                                      ./img/works/works-9-tablet@2x.webp 2x"
+                  type="image/webp" />
+                <source media="(max-width: 1199px)"
+                  srcset="./img/works/works-9-tablet.jpg 1x,
+                                                                                                                                      ./img/works/works-9-tablet@2x.jpg 2x" />
+
+                <source media="(max-width: 767px)" srcset="./img/works/works-9.webp 1x,
+                                                                    ./img/works/works-9@2x.webp. 2x"
+                  type="image/webp" />
+                <source media="(max-width: 767px)" srcset="./img/works/works-9.jpg 1x,
+                                                                    ./img/works/works-9@2x.jpg 2x" />
 
                 <img src="#" alt="Клавиатура" />
               </picture>
